# 221-331_Chikita

./: .gitignore  README.md
Lab1/: CMakeLists.txt  build_all.bat  clean.bat  code_explanation.md  theory_answers.md
Lab1/Lab1_PassManager/: CMakeLists.txt  Lab1_PassManager.pro  antidebug.cpp  antidebug.h  credentials.json.enc  credentialswindow.cpp  credentialswindow.h  cryptoutils.cpp  cryptoutils.h  encrypt_credentials.py  integritycheck.cpp  integritycheck.h  loginwindow.cpp  loginwindow.h  main.cpp
Lab1/Lab1_Protector/: CMakeLists.txt  Lab1_Protector.pro  main.cpp
